# md

./: .gitignore  MDX_SKILL.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: install-hook.sh  mdx-hook.sh  mdx-term.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Callout.tsx  CodeAnnotated.tsx  CodeBlock.tsx  CommandPalette.tsx  DataTable.tsx  Diagram.tsx  DiffView.tsx  DropZone.tsx  ExportButton.tsx  FindBar.tsx  MDXRenderer.tsx  SettingsPanel.tsx  Sidebar.tsx  Slider.tsx  Tabs.tsx  Timeline.tsx  index.tsx
src/context/: filePath.tsx  recentFiles.tsx  settings.tsx  theme.tsx
src/styles/: tokens.css
src/utils/: diff.ts  frontmatter.ts  headings.ts  shiki.ts
