[package]
name = "mdx-browser"
version = "0.1.0"
edition = "2021"

[lib]
name = "mdx_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdx-browser"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
